Changed home.html to index.html

--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 							<header id="header">
-								<a href="home.html" class="logo"><strong>Dr. Jessica De Silva</strong> California State University, Stanislaus</a>
+								<a href="index.html" class="logo"><strong>Dr. Jessica De Silva</strong> California State University, Stanislaus</a>
 								<ul class="icons">
 									<li><img src="images/stanlogo.png" width=10% alt="" /></li>
 								</ul>
@@ -127,7 +127,7 @@
 								<h2>Menu</h2>
 							</header>
 							<ul>
-								<li><a href="home.html">Homepage</a></li>
+								<li><a href="index.html">Homepage</a></li>
 								<li>
 									<span class="opener">Events</span>
 									<ul>
