--- a/former_ugrad_projects.html
+++ b/former_ugrad_projects.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 							<header id="header">
-								<a href="index.html" class="logo"><strong>Dr. Jessica De Silva</strong> California State University, Stanislaus</a>
+								<a href="home/index.html" class="logo"><strong>Dr. Jessica De Silva</strong> California State University, Stanislaus</a>
 								<ul class="icons">
 									<li><img src="images/stanlogo.png" width=10% alt="" /></li>
 								</ul>
@@ -48,7 +48,7 @@
 											<h4>Co-advisor: <a href="https://davidoffner.wordpress.com/">Dr. David Offner</a><br>
 												Students: <a href="https://www.manitoucamp.com/staff-profile/brady-gales/">Brady Gales</a> & <a href="https://math.sciences.ncsu.edu/people/bgkagy/">Bryson Kagy</a><br>Majors: Computer Science & Mathematics</h4>
 											<p>Gerrymandering is the term used to describe the drawing of legislative districts to favor one party over another. Recently, many mathematicians have tried to develop mathematical tools to decide if legislative districts are gerrymandered, and define fair methods of districting. For example, Landau, Reid, and Yershov [A Fair Division Solution to the Problem of Redistricting, Social Choice and Welfare, 2008] propose a protocol for districting based on a two-player fair-division process, where each player is entitled to draw the districts for a portion of the state. We call this the LRY protocol.</p>
-											<p>This research was done at the Carnegie Mellon University Summer Undergraduate Applied Mathematics Institute (<a href="https://www.cmu.edu/math/undergrad/suami/index.html">SUAMI</a>).</p>
+											<p>This research was done at the Carnegie Mellon University Summer Undergraduate Applied Mathematics Institute (<a href="https://www.cmu.edu/math/undergrad/suami/home/index.html">SUAMI</a>).</p>
 										</article>
 										<article>
 											<a class="image"><img src="images/disjoint.jpg" alt="" /></a>
@@ -56,7 +56,7 @@
 											<h4>Co-advisors: <a href="https://www.macalester.edu/mscs/facultystaff/heysse/">Dr. Kristin Heysse</a> & <a href="https://orion.math.iastate.edu/myoung/">Dr. Michael Young</a><br>
 											Students: <a href="https://math.washington.edu/people/adam-kapilow">Adam Kapilow</a> & <a href="https://www.montana.edu/wise/mentorbios/AnnaSchenfisch.html">Anna Schenfisch</a><br></h4>
 											<p>The Tur&aacute;n number of two graphs <i>G</i> and <i>H</i> is the maximum number of edges in a subgraph of <i>G</i> that contains no copy of <i>H</i>. In this project, we studied the Tur&aacute;n numbers of complete <i>r</i>-partite graphs and disjoint copies of complete graphs on <i>r</i> vertices.</p>
-											<p>This research was done at the Carnegie Mellon University Summer Undergraduate Applied Mathematics Institute (<a href="https://www.cmu.edu/math/undergrad/suami/index.html">SUAMI</a>).</p>
+											<p>This research was done at the Carnegie Mellon University Summer Undergraduate Applied Mathematics Institute (<a href="https://www.cmu.edu/math/undergrad/suami/home/index.html">SUAMI</a>).</p>
 											<ul class="actions">
 												<li><a href="https://arxiv.org/pdf/1610.00777.pdf" class="button">PAPER</a></li>
 											</ul>
@@ -67,7 +67,7 @@
 											<h4>Co-advisors: <a href="https://www.sites.google.com/view/michaeltait">Dr. Michael Tait</a> & <a href="https://orion.math.iastate.edu/myoung/">Dr. Michael Young</a><br>
 												Students: <a href="https://www.linkedin.com/in/xiang-si/">Xiang Si</a>, <a href="https://www.linkedin.com/in/yunustuncbilek/">Yunus Tun&ccedil;bilek</a>, & <a href="https://www.linkedin.com/in/ruifan-yang/">Ruifan Yang</a></h4>
 											<p>The Ramsey multiplicity constant of a graph <i>H</i> is the minimum proportion of copies of <i>H</i> in the complete graph which are monochromatic under an edge-coloring of the complete graph on <i>n</i> vertices as <i>n</i> goes to infinity. A graph <i>H</i> is called <i>r</i>-anti-common if the maximum proportion of rainbow copies of <i>H</i> in any <i>r</i>-coloring of the edges of the complete graph on <i>n</i> vertices is asymptotically achieved by taking a random coloring. We disproved the conjecture that all bipartite graphs are anti-common.</r></ir></p>
-											<p>This research was done at the Carnegie Mellon University Summer Undergraduate Applied Mathematics Institute (<a href="https://www.cmu.edu/math/undergrad/suami/index.html">SUAMI</a>).</p>
+											<p>This research was done at the Carnegie Mellon University Summer Undergraduate Applied Mathematics Institute (<a href="https://www.cmu.edu/math/undergrad/suami/home/index.html">SUAMI</a>).</p>
 											<ul class="actions">
 												<li><a href="https://ajc.maths.uq.edu.au/pdf/73/ajc_v73_p357.pdf" class="button">PAPER</a></li>
 											</ul>
@@ -88,7 +88,7 @@
 								<h2>Menu</h2>
 							</header>
 							<ul>
-								<li><a href="index.html">Homepage</a></li>
+								<li><a href="home/index.html">Homepage</a></li>
 								<li>
 									<span class="opener">Events</span>
 									<ul>
