--- a/home/index.html
+++ b/home/index.html
@@ -59,7 +59,7 @@
 									<h2>Menu</h2>
 								</header>
 								<ul>
-									<li><a href="index.html">Homepage</a></li>
+									<li><a href="home/index.html">Homepage</a></li>
 									<li>
 										<span class="opener">Events</span>
 										<ul>
