--- a/other_research_projects.html
+++ b/other_research_projects.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 							<header id="header">
-								<a href="index.html" class="logo"><strong>Dr. Jessica De Silva</strong> California State University, Stanislaus</a>
+								<a href="home/index.html" class="logo"><strong>Dr. Jessica De Silva</strong> California State University, Stanislaus</a>
 								<ul class="icons">
 									<li><img src="images/stanlogo.png" width=10% alt="" /></li>
 								</ul>
@@ -31,38 +31,8 @@
 							<!-- Content -->
 							<section>
 								<header class="major">
-									<h2>Erat lacinia</h2>
+									<h2>Under Construction</h2>
 								</header>
-								<div class="features">
-									<article>
-										<span class="icon fa-gem"></span>
-										<div class="content">
-											<h3>Portitor ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-paper-plane"></span>
-										<div class="content">
-											<h3>Sapien veroeros</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-rocket"></span>
-										<div class="content">
-											<h3>Quam lorem ipsum</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-signal"></span>
-										<div class="content">
-											<h3>Sed magna finibus</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-										</div>
-									</article>
-								</div>
 							</section>
 
 						</div>
@@ -78,7 +48,7 @@
 									<h2>Menu</h2>
 								</header>
 								<ul>
-									<li><a href="index.html">Homepage</a></li>
+									<li><a href="home/index.html">Homepage</a></li>
 									<li>
 										<span class="opener">Events</span>
 										<ul>
