test without html

--- a/home/index.html
+++ b/home/index.html
@@ -67,7 +67,7 @@
 											<li><a href="past_events.html">Past Events</a></li>
 										</ul>
 									</li>
-									<li><a href="news/student_news.html">Student News</a></li>
+									<li><a href="news/student_news">Student News</a></li>
 									<li>
 										<span class="opener">Research</span>
 										<ul>
