took out subfolders

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<h2>Menu</h2>
 								</header>
 								<ul>
-									<li><a href="home/index.html">Homepage</a></li>
+									<li><a href="index.html">Homepage</a></li>
 									<li>
 										<span class="opener">Events</span>
 										<ul>
@@ -67,7 +67,7 @@
 											<li><a href="past_events.html">Past Events</a></li>
 										</ul>
 									</li>
-									<li><a href="news/student_news">Student News</a></li>
+									<li><a href="student_news">Student News</a></li>
 									<li>
 										<span class="opener">Research</span>
 										<ul>
