--- a/student_news.html
+++ b/student_news.html
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="home/index.html" class="logo"><strong>Dr. Jessica De Silva</strong> California State University,
+					<a href="index.html" class="logo"><strong>Dr. Jessica De Silva</strong> California State University,
 						Stanislaus</a>
 					<ul class="icons">
 						<li><img src="images/stanlogo.png" width=10% alt="" /></li>
@@ -181,7 +181,7 @@
 						<h2>Menu</h2>
 					</header>
 					<ul>
-						<li><a href="home/index.html">Homepage</a></li>
+						<li><a href="index.html">Homepage</a></li>
 						<li>
 							<span class="opener">Events</span>
 							<ul>
