Updated events and student news.

--- a/past_events.html
+++ b/past_events.html
@@ -42,6 +42,30 @@
 										</thead>
 										<tbody>
 											<tr>
+												<td>11/13</td>
+												<td>11am-5pm EST</td>
+												<td><a href="https://web.cvent.com/event/d45c17cf-7729-4099-97d9-0f969531f143/summary">2020 CRA-WP Career Mentoring Workshop</a><br>This workshop is focused on Early-Career professionals and provides insight into how to build a great research program, advise students and get funding, how to be an effective and inspiring teacher, and how to set yourself up for promotion andd success.</td>
+											</tr>
+											<tr>
+												<td>11/13</td>
+												<td>12pm-1:15pm PST</td>
+												<td><a href="https://www.csueastbay.edu/math/upcoming-math-talks">Cal State East Bay Mathematics Department Colloquium</a><br>
+													At this colloquium, I'll be giving a talk about my experience to and through graduate school in mathematics. I will also touch on some of the fun mathematics research I did over the summer in VFP.</td>
+											</tr>
+											<tr>
+												<td>11/09-11/10</td>
+												<td>8am-5pm EST</td>
+												<td><a href="http://reg.conferences.dce.ufl.edu/Physics">2020 MPS Workshop for New Investigators</a>
+												<br>The main goals of the workshop is two-fold: (1) to provide prospective Principal Investigators who have just received their first award or who are considering applying for funding from the MPS programs with valuable information and advice on the policies, procedures, and opportunities available at NSF, (2) to train a pool of future reviewers and encourage volunteering to review as a way to learn about NSF process.  In addition to informational presentations on various topics relevant to the future PI’s, all participants will go through full mock panel review processes in breakout sessions. </td>
+											</tr>
+											<tr>
+												<td>11/06</td>
+												<td>4pm-5pm PST</td>
+												<td><a href="https://www.pacificmathalliance.org/conferences">Pacific Math Alliance Webinar</a><br>
+												<b>Speaker:</b> Dr. Roummel Marcia, UC Merced<br>
+												<b>Title:</b> Machine Learning: A Gentle Introduction to Data Science</td>
+											</tr>
+											<tr>
 												<td>10/19-10/25</td>
 												<td><i>all week</i></td>
 												<td><a href="https://www.2020sacnas.org/?gclid=CjwKCAiAv4n9BRA9EiwA30WND7haQQomw_u3IPQur6GOyYWC_KcB6GUpscwhswYUvf7YY-r224-HBBoCYpAQAvD_BwE">SACNAS National Conference</a><br>
