--- a/student_news.html
+++ b/student_news.html
@@ -39,6 +39,10 @@
 							<div class="table-wrapper">
 								<table>
 									<tr>
+										<td><b>11/13/2020</b></td>
+										<td>Katrina was accepted into the Stanislaus State Single Subject Credential Program.</td>
+									</tr>
+									<tr>
 										<td><b>10/31/2020</b></td>
 										<td>El&iacute;as was accepted into the SIAM 2021 Computational Science and
 											Engineering Conference <a
