Fixed Sherly's name

--- a/current_ugrad_projects_abstract.html
+++ b/current_ugrad_projects_abstract.html
@@ -68,11 +68,11 @@
 											</ul>
 										</article>
 										<article>
-											<a class="image"><img src="images/shirleyandaaron.png" alt="" /></a>
+											<a class="image"><img src="images/sherlyandaaron.png" alt="" /></a>
 											<h3>Predictive Modeling of Mathematics Course Enrollment and Success</h3>
-											<h4>Students: Aaron & Shirley<br>Majors: Mathematics</h4>
+											<h4>Students: Aaron & Sherly<br>Majors: Mathematics</h4>
 											<p>We our working with Stan State's <a href="https://www.csustan.edu/iea">Institutional Effectiveness and Analytics (IEA)</a> team to study recent trends in our mathematics major courses. In recent semesters, the Mathematics Department has needed to offer more sections of lower and upper divison mathematics courses. This project aims to first apply statistical methods to analyze the recent increase in enrollment, and then we will later develop a Machine Learning model to predict enrollment rates for course offerings in the mathematics major.</p>
-											<p>Aaron & Shirley are both supported as a PUMP Undergraduate Research Group (URG) and through the Stan State <a href="https://www.csustan.edu/STEM-success/research-and-immersion-stem-excellence">RISE</a> program.</p>
+											<p>Aaron & Sherly are both supported as a PUMP Undergraduate Research Group (URG) and through the Stan State <a href="https://www.csustan.edu/STEM-success/research-and-immersion-stem-excellence">RISE</a> program.</p>
 											<ul class="actions">
 												<li><a href="http://www.pump-math.org/undergraduate-research-groups" class="button">PUMP PROGRAM</a></li>
 											</ul>
