--- a/student_news.html
+++ b/student_news.html
@@ -39,6 +39,30 @@
 							<div class="table-wrapper">
 								<table>
 									<tr>
+										<td><b>03/02/2021</b></td>
+										<td>Joseph was accepted into the 2021 Cal-Bridge Summer (CAMPARE) program working with the CAMPARE HERA Astronomy Minority Partnership (CHAMP).</td>
+									</tr>
+									<tr>
+										<td><b>02/12/2021</b></td>
+										<td>Jesselynn was the first author on a publication titled <a href="https://www.liebertpub.com/doi/10.1089/zeb.2020.1951">TAEL 2.0: An Improved Optogenetic Expression for Zebrafish</a> that was featured on the cover of the Zebrafish journal.</td>
+									</tr>
+									<tr>
+										<td><b>02/04/2021</b></td>
+										<td>Darcy was accepted into the Washington State University Mathematics Ph.D. Program.</td>
+									</tr>
+									<tr>
+										<td><b>02/04/2021</b></td>
+										<td>Luke was accepted into the University of Washington Applied Mathematics Master's Program.</td>
+									</tr>
+									<tr>
+										<td><b>01/23/2021</b></td>
+										<td>Darcy gave a research talk at the Nebraska Conference for Undergraduate Women in Mathematics.</td>
+									</tr>
+									<tr>
+										<td><b>12/01/2020</b></td>
+										<td>Ashley was accepted into the Wittengberg University Education Master's Program. There she will also have the opportunity to play her last two years of college-level tennis.</td>
+									</tr>
+									<tr>
 										<td><b>11/13/2020</b></td>
 										<td>Katrina was accepted into the Stanislaus State Single Subject Credential Program.</td>
 									</tr>
