--- a/student_news.html
+++ b/student_news.html
@@ -39,6 +39,10 @@
 							<div class="table-wrapper">
 								<table>
 									<tr>
+										<td><b>03/10/2021</b></td>
+										<td>Arlena was accepted into the Mathematics Sin Fronteras billingual extracurricular math outreach lecture series hosted by Brown University.</td>
+									</tr>
+									<tr>
 										<td><b>03/02/2021</b></td>
 										<td>Joseph was accepted into the 2021 Cal-Bridge Summer (CAMPARE) program working with the CAMPARE HERA Astronomy Minority Partnership (CHAMP).</td>
 									</tr>
