--- a/student_news.html
+++ b/student_news.html
@@ -39,6 +39,26 @@
 							<div class="table-wrapper">
 								<table>
 									<tr>
+										<td><b>05/05/2021</b></td>
+										<td>Jesselynn gave flash talks at the College of Science Research Celebration and RISE Research Celebration.</td>
+									</tr>
+									<tr>
+										<td><b>05/04/2021</b></td>
+										<td>Jasmin was accepted into the <a href="https://geometrynyc.wixsite.com/polymathreu">Polymath REU program</a>.</td>
+									</tr>
+									<tr>
+										<td><b>04/24/2021</b></td>
+										<td>Aaron & Sherly gave a fantastic talk at the PUMP URG Symposium.</a>.</td>
+									</tr>
+									<tr>
+										<td><b>04/12/2021</b></td>
+										<td>Laura & Ashley have been accepted into the Stan State Single Subject Credential Program.</td>
+									</tr>
+									<tr>
+										<td><b>03/27/2021</b></td>
+										<td>Sherly was accepted to be an intern for the <a href="https://education.lbl.gov/internships/vfp/">Visiting Faculty Program</a> at Lawrence Berkeley National Laboratory.</td>
+									</tr>
+									<tr>
 										<td><b>03/10/2021</b></td>
 										<td>Arlena was accepted into the Mathematics Sin Fronteras billingual extracurricular math outreach lecture series hosted by Brown University.</td>
 									</tr>
