--- a/past_events.html
+++ b/past_events.html
@@ -36,74 +36,141 @@
 										<thead>
 											<tr>
 												<th>Date</th>
-												<th>Time</th>
 												<th>Event</th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr>
+												<td>05/11</td>
+												<td>College of Science Research Celebration<br>
+												Jesselynn and other former students of mine gave wonderful lightning talks at this virtual celebration.</td>
+											</tr>
+											<tr>
+												<td>04/28</td>
+												<td>Guest Lecture at Soka University of America<br>
+												I was invited by one of my colleagues, Dr. Kat Perry, to speak to her Finite Mathemaitcs students about one of my former research projects in gerrymandering.</td>
+											</tr>
+											<tr>
+												<td>04/24</td>
+												<td>PUMP Undergraduate Research Group Syposium<br>
+												Aaron and Sherly gave a great talk at this symposium about our analysis of Stan State student success in mathematics major courses.</td>
+											</tr>
+											<tr>
+												<td>04/19-04/20</td>
+												<td>HHMI Inclusive Excellence 3 Learning Community Kickoff Meeting<br>
+												Our grant proposal team worked with academics and administration across the nation to address DEI challenges in STEM.</td>
+											</tr>
+											<tr>
+												<td>04/15</td>
+												<td>Humboldt State University Colloquium<br>
+												This colloquium was such a blast! The students were great and I was grateful for the opportunity to meet new colleagues in the CSU!</td>
+											</tr>
+											<tr>
+												<td>04/14</td>
+												<td>Women in STEM New Student Welcome<br>
+												Dr. Sarah Bissonnette and I had the pleasure of welcoming our Fall 2021 class of women STEM majors to Stan State.</td>
+											</tr>
+											<tr>
+												<td>04/10</td>
+												<td><a href="https://sites.google.com/view/bad-math-day-spring-2021/home">Bay Area Discrete (BAD) Math Day</a><br>
+												It was great to co-organize this conference with a great team of graduate students and postdocs from UC Berkeley and Stanford.</td>
+											</tr>
+											<tr>
+												<td>03/24</td>
+												<td><a href="https://www.csustan.edu/article/theatre-related-research-topics-earn-top-honors-stan-state-competition">Stan State Student Research Competition</a><br>
+												I was honored to be a juror for this competition! Read about my comments on the competition in the article linked.</td>
+											</tr>
+											<tr>
+												<td>03/03</td>
+												<td><a href="http://www.timhsu.net/colloq/">San Jose State Mathematics Department Colloquium</a><br>
+												This was a fun colloquium, catching up with friends I met during my job search process!</td>
+											</tr>
+											<tr>
+												<td>02/11</td>
+												<td>NSF Proposal Submitted!<br>
+												I submitted my first NSF proposal as a PI with a group of fantastic co-PIs. Shoutout to Dr.'s Roummel Marcia, Erica Rutter, Mario Banuelos, and Luca Brillante for helping make this happen.</td>
+											</tr>
+											<tr>
+												<td>01/07</td>
+												<td><a href="http://jointmathematicsmeetings.org/meetings/national/jmm2021/2247_intro">Joint Mathematics Meetings</a><br>
+												<b>AMS Special Session:</b> If You Build It They Will Come<br>Presentations by Scholars in the National Alliance for Doctoral Studies in the Mathematical Sciences</td>
+											</tr>
+											<tr>
+												<td>01/07</td>
+												<td><a href="http://jointmathematicsmeetings.org/meetings/national/jmm2021/2247_intro">Joint Mathematics Meetings</a><br>
+												<b>AMS Special Session:</b> If You Build It They Will Come<br>Presentations by Scholars in the National Alliance for Doctoral Studies in the Mathematical Sciences</td>
+											</tr>
+											<tr>
+												<td>12/10</td>
+												<td><a href="https://www.womenincombinatorics.com/colloquium">Women in Combinatorics Virtual Seminar</a><br>
+												I gave a virtual research talk for WinCom! The Women in Combinatorics network, WinCom, is intended as a platform for any Combinatorialist who identifies as a woman and would like to connect with other women for various professional reasons and concerns. A database spreadsheet is available for the public to view as a place to search for women collaborators, keynotes, and mentors to encourage the diversification of our research networks.</td>
+											</tr>
+											<tr>
+												<td>11/20-11/23/</td>
+												<td><a href="https://www.imsi.institute/paradigms2020/">paraDIGMS Fall Conference</a><br>
+												It was a pleasure to speak about my experiences mentoring undergraduate mathematics majors at Stanislaus State with graduate directors across the nation.</td>
+											</tr>
+											<tr>
+												<td>11/21</td>
+												<td><a href="https://sites.google.com/view/bad-math-day-spring-2020/home">Bay Area Discrete (BAD) Math Day</a><br>
+												I am one of the co-organizers for the BAD Math Day conference. BAD Math Days are one-day meetings aimed at facilitating communication between researchers and graduate students of discrete mathematics around the San Francisco Bay Area. These days happen twice a year and strive to create an informal atmosphere to talk about discrete mathematics. The term discrete mathematics is chosen to include at least the following topics: Algebraic and Enumerative Combinatorics, Discrete Geometry, Graph Theory, Coding and Design Theory, Combinatorial Aspects of Computational Algebra and Geometry, Combinatorial Optimization, Probabilistic Combinatorics, Combinatorial Aspects of Statistics, and Combinatorics in Mathematical Physics.</td>
+											</tr>
+											<tr>
 												<td>11/13</td>
-												<td>11am-5pm EST</td>
 												<td><a href="https://web.cvent.com/event/d45c17cf-7729-4099-97d9-0f969531f143/summary">2020 CRA-WP Career Mentoring Workshop</a><br>This workshop is focused on Early-Career professionals and provides insight into how to build a great research program, advise students and get funding, how to be an effective and inspiring teacher, and how to set yourself up for promotion andd success.</td>
 											</tr>
 											<tr>
 												<td>11/13</td>
-												<td>12pm-1:15pm PST</td>
+												<td><a href="https://web.cvent.com/event/d45c17cf-7729-4099-97d9-0f969531f143/summary">2020 CRA-WP Career Mentoring Workshop</a><br>This workshop is focused on Early-Career professionals and provides insight into how to build a great research program, advise students and get funding, how to be an effective and inspiring teacher, and how to set yourself up for promotion andd success.</td>
+											</tr>
+											<tr>
+												<td>11/13</td>
 												<td><a href="https://www.csueastbay.edu/math/upcoming-math-talks">Cal State East Bay Mathematics Department Colloquium</a><br>
 													At this colloquium, I'll be giving a talk about my experience to and through graduate school in mathematics. I will also touch on some of the fun mathematics research I did over the summer in VFP.</td>
 											</tr>
 											<tr>
 												<td>11/09-11/10</td>
-												<td>8am-5pm EST</td>
 												<td><a href="http://reg.conferences.dce.ufl.edu/Physics">2020 MPS Workshop for New Investigators</a>
 												<br>The main goals of the workshop is two-fold: (1) to provide prospective Principal Investigators who have just received their first award or who are considering applying for funding from the MPS programs with valuable information and advice on the policies, procedures, and opportunities available at NSF, (2) to train a pool of future reviewers and encourage volunteering to review as a way to learn about NSF process.  In addition to informational presentations on various topics relevant to the future PI’s, all participants will go through full mock panel review processes in breakout sessions. </td>
 											</tr>
 											<tr>
 												<td>11/06</td>
-												<td>4pm-5pm PST</td>
 												<td><a href="https://www.pacificmathalliance.org/conferences">Pacific Math Alliance Webinar</a><br>
 												<b>Speaker:</b> Dr. Roummel Marcia, UC Merced<br>
 												<b>Title:</b> Machine Learning: A Gentle Introduction to Data Science</td>
 											</tr>
 											<tr>
 												<td>10/19-10/25</td>
-												<td><i>all week</i></td>
 												<td><a href="https://www.2020sacnas.org/?gclid=CjwKCAiAv4n9BRA9EiwA30WND7haQQomw_u3IPQur6GOyYWC_KcB6GUpscwhswYUvf7YY-r224-HBBoCYpAQAvD_BwE">SACNAS National Conference</a><br>
 													Darcy and Juan presented posters at the 2020 SACNAS National Conference. The largest multidisciplinary and multicultural STEM diversity event in the country, the SACNAS conference serves to equip, empower, and energize participants for their academic and professional paths in STEM.</td>
 											</tr>
 											<tr>
 												<td>10/16</td>
-												<td>4pm-5pm PST</td>
 												<td><a href="https://www.pacificmathalliance.org/conferences">Pacific Math Alliance Webinar</a><br>
 												<b>Title:</b> Graduate Students Demystifying Graduate School</td>
 											</tr>
 											<tr>
 												<td>10/2</td>
-												<td>4pm-5pm PST</td>
 												<td><a href="https://www.pacificmathalliance.org/conferences">Pacific Math Alliance Webinar</a><br>
 												<b>Title:</b> Demystifying the Graduate School Application Process</td>
 											</tr>
 											<tr>
 												<td>09/23</td>
-												<td>3:30pm-5:00pm PST</td>
 												<td><a href="https://www.csueastbay.edu/math/upcoming-math-talks">Sonoma State Mathematics Department Colloquium</a><br>
 													At this colloquium, I talked about my journey to and through graduate school in mathematics. I will also touch on some of the fun mathematics research I did over the summer in VFP.</td>
 											</tr>
 											<tr>
 												<td>09/18</td>
-												<td>3pm-4pm PST</td>
 												<td><a href="https://www.pacificmathalliance.org/conferences">Pacific Math Alliance Webinar</a><br>
 												<b>Title:</b> Research Opportunites for Undergraduates in the Mathematical Sciences</td>
 											</tr>
 											<tr>
 												<td>09/04</td>
-												<td>4pm-5pm PST</td>
 												<td><a href="https://www.pacificmathalliance.org/conferences">Pacific Math Alliance Webinar</a><br>
 												<b>Title:</b> Welcome to the Pacific Math Alliance</td>
 											</tr>
 											<tr>
 												<td>June-August</td>
-												<td>9am-5pm PST</td>
 												<td><a href="https://www.womenincombinatorics.com/colloquium">Visiting Faculty Program</a><br>
 												During Summer 2020, I participated in the Visitng Faculty Program (virtually) at Lawrence Berkeley National Laboratory. In that program, I worked with two of my students, Darcy and Juan, and LBNL scientist Talita Perciano on an image segmentation research project.</td>
 											</tr>
