--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -42,72 +42,64 @@
 										</thead>
 										<tbody>
 											<tr>
-												<td>11/06-11/07</td>
-												<td>11am-5pm EST</td>
-												<td><a href="https://mathalliance.org/field-of-dreams-conference/">Virtual Field of Dreams Conference</a><br>
-													Each Fall Alliance Scholars, together with their Alliance Mentors, are invited to the Field of Dreams Conference. The Field of Dreams Conference introduces potential graduate students to graduate programs in the mathematical sciences at Alliance schools as well as professional opportunities in these fields. Scholars spend time with faculty mentors from the Alliance schools, get advice on graduate school applications, and attend seminars on graduate school preparation and expectations as well as career seminars.</td>
+												<td>05/17</td>
+												<td>4-5PM PST</td>
+												<td>Stan State Mathematics End of Year Celebration<br>
+												I'm looking forward to honoring all of our graduates at this virtual gathering!</td>
 											</tr>
 											<tr>
-												<td>11/06</td>
-												<td>4pm-5pm PST</td>
-												<td><a href="https://www.pacificmathalliance.org/conferences">Pacific Math Alliance Webinar</a><br>
-												<b>Speaker:</b> Dr. Roummel Marcia, UC Merced<br>
-												<b>Title:</b> Machine Learning: A Gentle Introduction to Data Science</td>
+												<td>05/21</td>
+												<td>4-6PM PST</td>
+												<td>MREC^3 2021<br>
+												Kevin, Pablo, and Ed will be speaking about our Pokemon GO! research at this conference for student researchers at community colleges.</td>
 											</tr>
 											<tr>
-												<td>11/09-11/10</td>
-												<td>8am-5pm EST</td>
-												<td><a href="http://reg.conferences.dce.ufl.edu/Physics">2020 MPS Workshop for New Investigators</a>
-												<br>The main goals of the workshop is two-fold: (1) to provide prospective Principal Investigators who have just received their first award or who are considering applying for funding from the MPS programs with valuable information and advice on the policies, procedures, and opportunities available at NSF, (2) to train a pool of future reviewers and encourage volunteering to review as a way to learn about NSF process.  In addition to informational presentations on various topics relevant to the future PI’s, all participants will go through full mock panel review processes in breakout sessions. </td>
+												<td>05/25</td>
+												<td>9:30AM-5:10PM EST</td>
+												<td>Creating a Better Summer Experience:<br><a href="https://minoritymath.org/reudeiworkshop2021/">A DEI Workshop for REU Directors and Faculty Mentors</a><br>
+												This workshop will provide the tools to assist with mentoring underrepresented and minoritized students in mahtematics, specifically in immersive summer research experiences.</td>
 											</tr>
 											<tr>
-												<td>11/13</td>
-												<td>12pm-1:15pm PST</td>
-												<td><a href="https://www.csueastbay.edu/math/upcoming-math-talks">Cal State East Bay Mathematics Department Colloquium</a><br>
-													At this colloquium, I'll be giving a talk about my experience to and through graduate school in mathematics. I will also touch on some of the fun mathematics research I did over the summer in VFP.</td>
+												<td>05/25-05/28</td>
+												<td><i>all day</i></td>
+												<td><a href="https://canadam.math.ca/2021/program/schedule_overview">2021 CANADAM Online Meeting</a><br>
+												I am excited to have been invited to give a talk at this conference by my academic sister, Dr. Rachel Kirsch.</td>
 											</tr>
 											<tr>
-												<td>11/20-11/22</td>
-												<td>2-3pm, 4-5pm EST</td>
-												<td><a href="https://www.imsi.institute/paradigms2020/?fbclid=IwAR0aLN4VsjU9UbDzjoebV8w1g776yiVMtElkGyNyHjgBU_oXjAb3Ss1M8FE">paraDIGMS Fall Conference</a><br>
-													This online conference is the first event of the American Mathematical Society’s paraDIGMS initiative to build a community of practice for graduate education in mathematics, with the goal of making the profession stronger and more equitable. I will be serving on a panel discussing mentoring strategies for undergraduates at HSIs who wish to attend graduate school.</td>
+												<td>05/27</td>
+												<td>9AM-11:30AM</td>
+												<td>Stan State College of Science 2021 Commencement Ceremony<br>
+												Please stop by and say hi to me at the graduate check-in station! :)</td>
 											</tr>
 											<tr>
-												<td>11/20</td>
-												<td>4pm-5pm PST</td>
-												<td><a href="https://www.pacificmathalliance.org/conferences">Pacific Math Alliance Webinar</a><br>
-													<b>Title:</b> Careers in Mathematics</td>
-												</tr>
-											<tr>
-												<td>11/21</td>
-												<td>10am-3:30pm PST</td>
-												<td><a href="https://sites.google.com/view/bad-math-day-spring-2020/home">Bay Area Discrete (BAD) Math Day</a><br>
-												I am one of the co-organizers for the BAD Math Day conference. BAD Math Days are one-day meetings aimed at facilitating communication between researchers and graduate students of discrete mathematics around the San Francisco Bay Area. These days happen twice a year and strive to create an informal atmosphere to talk about discrete mathematics. The term discrete mathematics is chosen to include at least the following topics: Algebraic and Enumerative Combinatorics, Discrete Geometry, Graph Theory, Coding and Design Theory, Combinatorial Aspects of Computational Algebra and Geometry, Combinatorial Optimization, Probabilistic Combinatorics, Combinatorial Aspects of Statistics, and Combinatorics in Mathematical Physics.</td>
+												<td>June-August 2021</td>
+												<td><i>all day</i></td>
+												<td>2021 Visiting Faculty Program<br>
+												Sherly and I will continue our work with Dr. Talita Perciano from LBNL to improve and test our image segmentation algorithm.</td>
 											</tr>
 											<tr>
-												<td>12/04</td>
-												<td>4pm-5pm PST</td>
-												<td><a href="https://www.pacificmathalliance.org/conferences">Pacific Math Alliance Webinar</a><br>
-													<b>Title:</b> Financial Support, Master's and Postbacs</td>
-												</tr>
-											<tr>
-											<tr>
-												<td>12/10</td>
-												<td>11am-12pm PST</td>
-												<td><a href="https://www.womenincombinatorics.com/colloquium">Women in Combinatorics Virtual Seminar</a><br>
-												I'll be giving a virtual research talk for WinCom! The Women in Combinatorics network, WinCom, is intended as a platform for any Combinatorialist who identifies as a woman and would like to connect with other women for various professional reasons and concerns. A database spreadsheet is available for the public to view as a place to search for women collaborators, keynotes, and mentors to encourage the diversification of our research networks.</td>
+												<td>06/7-06/11</td>
+												<td><i>all day</i></td>
+												<td><a href="https://aimath.org/programs/researchcommunities/lmrc/">Latinx Mathematicians Research Community (MRC) Kick-off Research Workshop</a><br>
+												The Latinx MRC is a year long program for early-career Latinx mathematicians providing tiered mentoring research opportunities, professional development opportunities, and establishes a large research network of Latinx mathematicians.</td>
 											</tr>
 											<tr>
-												<td>01/07</td>
-												<td>9:30am-10:00am PST</td>
-												<td><a href="http://jointmathematicsmeetings.org/meetings/national/jmm2021/2247_intro">Joint Mathematics Meetings</a><br>
-												<b>AMS Special Session:</b> If You Build It They Will Come<br>Presentations by Scholars in the National Alliance for Doctoral Studies in the Mathematical Sciences</td>
+												<td>06/11-06/12</td>
+												<td><i>all day</i></td>
+												<td><a href="https://www.masterygrading.com/home/university-stem-conference">Mastery Based Grading Conference</a><br>
+												I am looking forward to learning how to develop and implement a mastery-based grading strategy into my future courses.</td>
+											</tr>
+											<tr>
+												<td>07/23</td>
+												<td>10AM-11AM PST</td>
+												<td><a href="https://www.siam.org/conferences/cm/program/workshops/an18-workshops">SIAM Workshop Celebrating Diversity Luncheon</a><br>
+												I will be co-moderating a luncheon session for the SIAM Workshop Celebrating Diversity.</td>
 											</tr>
 										</tbody>
 										<tfoot>
 											<tr>
 												<td colspan="2"></td>
-												<td>Updated on November 4, 2020.</td>
+												<td>Updated on May 12, 2021.</td>
 											</tr>
 										</tfoot>
 									</table>
