--- a/past_events.html
+++ b/past_events.html
@@ -47,7 +47,7 @@
 											</tr>
 											<tr>
 												<td>04/28</td>
-												<td>Guest Lecture at Soka University of America<br>
+												<td>Guest Lecture at <a href="https://www.soka.edu/">Soka University of America</a><br>
 												I was invited by one of my colleagues, Dr. Kat Perry, to speak to her Finite Mathemaitcs students about one of my former research projects in gerrymandering.</td>
 											</tr>
 											<tr>
@@ -62,7 +62,7 @@
 											</tr>
 											<tr>
 												<td>04/15</td>
-												<td>Humboldt State University Colloquium<br>
+												<td><a href="https://math.humboldt.edu/get-involved/mathematics-colloquium">Humboldt State University Mathematics Department Colloquium</a><br>
 												This colloquium was such a blast! The students were great and I was grateful for the opportunity to meet new colleagues in the CSU!</td>
 											</tr>
 											<tr>
