Update events and student news.

--- a/past_events.html
+++ b/past_events.html
@@ -41,6 +41,21 @@
 										</thead>
 										<tbody>
 											<tr>
+												<td>05/21</td>
+												<td>MREC^3 2021<br>
+												Kevin, Pablo, and Ed presented our Pokemon GO! research at this conference for student researchers at community colleges.</td>
+											</tr>
+											<tr>
+												<td>05/25</td>
+												<td>Creating a Better Summer Experience:<br><a href="https://minoritymath.org/reudeiworkshop2021/">A DEI Workshop for REU Directors and Faculty Mentors</a><br>
+												This workshop provided the tools to assist with mentoring underrepresented and minoritized students in mahtematics, specifically in immersive summer research experiences.</td>
+											</tr>
+											<tr>
+												<td>05/17</td>
+												<td>Stan State Mathematics End of Year Celebration<br>
+												We honored all of our graduates at this virtual gathering!</td>
+											</tr>
+											<tr>
 												<td>05/11</td>
 												<td>College of Science Research Celebration<br>
 												Jesselynn and other former students of mine gave wonderful lightning talks at this virtual celebration.</td>
