--- a/student_news.html
+++ b/student_news.html
@@ -39,6 +39,15 @@
 							<div class="table-wrapper">
 								<table>
 									<tr>
+										<td><b>05/21/2021</b></td>
+										<td>Darcy & Cassie were both selected for the <a href="https://sites.google.com/mail.fresnostate.edu/bamm/home?authuser=0">BAMM!</a> program. They will both be pursuing a Master's degree in Mathematics in the Fall. Darcy has chosen to attend San Francisco State and Cassie will be joining fellow Stan State alumni at Fresno State.</a></td>
+									</tr>
+									<tr>
+									<tr>
+										<td><b>05/21/2021</b></td>
+										<td>Luke will be attending the University of Southern California <a href="https://lasbest.usc.edu/about/">Biostatistics Education Summer Training Program.</a></td>
+									</tr>
+									<tr>
 										<td><b>05/05/2021</b></td>
 										<td>Jesselynn gave flash talks at the College of Science Research Celebration and RISE Research Celebration.</td>
 									</tr>
