--- a/student_news.html
+++ b/student_news.html
@@ -39,6 +39,10 @@
 							<div class="table-wrapper">
 								<table>
 									<tr>
+										<td><b>05/27/2021</b></td>
+										<td>Jordan will be attending the UC Davis School of Medicine in the Fall!</a></td>
+									</tr>
+									<tr>
 										<td><b>05/21/2021</b></td>
 										<td>Darcy & Cassie were both selected for the <a href="https://sites.google.com/mail.fresnostate.edu/bamm/home?authuser=0">BAMM!</a> program. They will both be pursuing a Master's degree in Mathematics in the Fall. Darcy has chosen to attend San Francisco State and Cassie will be joining fellow Stan State alumni at Fresno State.</a></td>
 									</tr>
