--- a/student_news.html
+++ b/student_news.html
@@ -40,6 +40,10 @@
 								<table>
 									<tr>
 										<td><b>05/27/2021</b></td>
+										<td>Yonathan will be starting a full-time IT position at Predicine.</a></td>
+									</tr>
+									<tr>
+										<td><b>05/27/2021</b></td>
 										<td>Jordan will be attending the UC Davis School of Medicine in the Fall!</a></td>
 									</tr>
 									<tr>
