Updated student projects

--- a/former_ugrad_projects.html
+++ b/former_ugrad_projects.html
@@ -72,6 +72,61 @@
 												<li><a href="https://ajc.maths.uq.edu.au/pdf/73/ajc_v73_p357.pdf" class="button">PAPER</a></li>
 											</ul>
 										</article>
+										<article>
+											<a class="image"><img src="images/darcyandjuan.png" alt="" /></a>
+											<h3>Hypergraph-Based Image Segmentation</h3>
+											<h4>Students: Darcy & Juan<br>Majors: Mathematics</h4>
+											<p>During the summer of 2020, we had the opportunity to participate in the <a href="https://science.osti.gov/wdts/vfp">Visiting Faculty Program (VFP)</a> at Lawrence Berkeley National Laboratory. During this 10 week program, we worked under <a href="https://tperciano.wixsite.com/home">Talita Perciano</a> from the Data Analytics and Visualization research group at LBNL. I met Talita when I participated in the <a href="http://shinstitute.org/srp-application/">Sustainable Research Pathways Workshop</a>. Although a virtual summer research program wasn't ideal, we still had a lot of fun learning about graph theory, image segmentation, and how to code in C++.</p>
+											<p>The following semester, both Darcy and Juan were supported by the Stan State <a href="https://www.csustan.edu/office-research-sponsored-programs/sersca-program">SERSCA</a> program.</p>
+											<ul class="actions">
+												<li><a href="current_ugrad_projects_abstract.html" class="button">Abstract</a></li>
+											</ul>
+										</article>
+										<article>
+											<a class="image"><img src="images/andrewandjasmin.jpg" alt="" /></a>
+											<h3>Mean-Shift Clustering in C++</h3>
+											<h4>Students: Andrew & Jasmin<br>Majors: Computer Science & Mathematics</h4>
+											<p>In the VFP image segmentation algorithm, we applied the k-means clustering algorithm to create the hypergraph model for the image. In other hypergraph-based segmentation algorithms, mean-shift clustering also produced great results. However, we did not find a suitable C++ implementation of the mean-shift algorithm. Andrew and Jasmin worked together to understand the Python implementation of the mean-shift algorithm and bandwidth approximation in order to reproduce it in C++. We hope to then be able to incorporate this in the image segmentation algorithm and compare results to that of the k-means version.</p>
+											<p>Andrew and Jasmin were both supported by <a href="https://www.csustan.edu/AMP/join">CSU-LSAMP</a>.</p>
+										</article>
+										<article>
+											<a class="image"><img src="images/kevin.jpg" alt="" /></a>
+											<h3>Pokemon GO! PVP Optimization</h3>
+											<h4>Co-Advisor: Dr. Jon Brown (Bakersfield College)<br>
+											Students: Kevin, Pablo (BC), Ed (BC)<br>Majors: Computer Science</h4>
+											<p>This project was brought to us by Dr. Brown from Bakersfield College who I met through the <a href="https://www.pacificmathalliance.org/">Pacific Math Alliance</a>. Funny enough, Dr. Brown is also an alumnus from Stan State! He has worked with BC students in the past to apply game theory to analyze <a href="https://www.pokemongolive.com/en/">Pokemon GO!</a>. In this project, we were interested in analyzing PVP battles in which you choose three of your Pokemon to fight three of your opponent's Pokemon. You can swap between any of your three Pokemon throughout the battle and can shield against charge attacks exactly twice. The player wins if they defeat all their opponent's Pokemon, or if the match time ends and they have the most Pokemon/health remaining.</p>
+											<p>Kevin was supported by the Stan State <a href="https://www.csustan.edu/STEM-success/research-and-immersion-stem-excellence">RISE</a> program.</p>
+										</article>
+										<article>
+											<a class="image"><img src="images/jesselynn.png" alt="" /></a>
+											<h3>Modeling Embryo Cell Migration and Adhesion</h3>
+											<h4>Student: Jesselynn<br>Major: Mathematics</h4>
+											<p>In this collaboration, I have had so much fun learning about cellular biology from Jesselynn. Jesselynn was a Lab Assistant in Dr. Stephanie Woo's lab at UC Merced while being a full-time math major at Stan State. In the Woo Lab, Jesselynn captures videos of zebrafish embryo cells migrating to uniformly spread out before coming together to form an endodermal sheet. We are using Fiji/ImageJ to obtain data from these videos which we will then analyze in Python to better understand cell migration. Jesselynn will be starting the Quantitative Systems Biology PhD Program at UC Merced in Fall 2022.</p>
+											<p>Jesselynn was supported by the Stan State <a href="https://www.csustan.edu/STEM-success/research-and-immersion-stem-excellence">RISE</a> program.</p>
+											<ul class="actions">
+												<li><a href="http://stephaniewoo.ucmerced.edu/" class="button">DR. WOO'S LAB</a></li>
+											</ul>
+										</article>
+										<article>
+											<a class="image"><img src="images/shirleyandaaron.png" alt="" /></a>
+											<h3>Predictive Modeling of Mathematics Course Enrollment and Success</h3>
+											<h4>Students: Aaron & Shirley<br>Majors: Mathematics</h4>
+											<p>We worked with Stan State's <a href="https://www.csustan.edu/iea">Institutional Effectiveness and Analytics (IEA)</a> team to study recent trends in our mathematics major courses. In recent semesters, the Mathematics Department has needed to offer more sections of lower and upper divison mathematics courses. This project applied statistical methods to analyze opportunity gaps in certain math major classes disagregated by gender, first-generation status, and underrepresented minority groups.</p>
+											<p>Aaron & Shirley were both supported as a PUMP Undergraduate Research Group (URG) and through the Stan State <a href="https://www.csustan.edu/STEM-success/research-and-immersion-stem-excellence">RISE</a> program.</p>
+											<ul class="actions">
+												<li><a href="http://www.pump-math.org/undergraduate-research-groups" class="button">PUMP PROGRAM</a></li>
+											</ul>
+										</article>
+										<article>
+											<a class="image"><img src="images/rommell.jpg" alt="" /></a>
+											<h3>Predictive Modeling of Track Performances</h3>
+											<h4>Student: Rommell<br>Major: Physics</h4>
+											<p>Rommell has a passion for running track, he was an all-star athlete in high school and even competed on Stan State's track team. Using data from <a href="athletic.net">Athletic.net</a>, we analyzed how an athlete's 800 meter time is related to their gender, grade level, and season records for the 400 meter and/or 1600 meter. It is often believed that there are strong correlations between these events, the best 400m runners often do very well in the 800m and similarly for the 1600m. Although Rommell has since graduated with his Physics & Astronomy undergraduate degree from Stan State, he is continuing to work on this project while working in a Physics Lab at UC Santa Barbara.</p>
+											<p>Rommell was in the Cal-Bridge program for undergraduates studying astronomy and/or physics.</p>
+											<ul class="actions">
+												<li><a href="https://www.cpp.edu/calbridge/" class="button">CAL-BRIDGE</a></li>
+											</ul>
+										</article>
 									</div>
 								</section>
 
