image name update

--- a/current_ugrad_projects.html
+++ b/current_ugrad_projects.html
@@ -33,7 +33,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a class="image"><img src="images/EVcharging.jpeg" alt="" /></a>
+											<a class="image"><img src="images/evcharging.jpeg" alt="" /></a>
 											<h3>EV Charging Desert: The Challenges with Electric Vehicle Charging in Stanislaus County</h3>
 											<h4>Student: Delton<br>Major: Computer Science, Honors Project</h4>
 											<p>In 2020, California State Governor Gavin Newsom issued an executive order banning the
