Updates to footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 									<div class="content">
 										<header>
 											<h1>Welcome</h1>
-											<p>TO DR. DE SILVA'S HOMEPAGE</p>
+											<p>TO JESSICA DE SILVA'S HOMEPAGE</p>
 										</header>
 										<p>Hi, thank you for checking out my page! My name is Dr. Jessica De Silva and I have been at <a href="https://www.csustan.edu">California State University, Stanislaus</a> since 2018 where I am currently an Associate Professor of Mathematics. About 15 minutes away is the little town of Hilmar where I grew up. Known locally for its school spirit, out-of-towners may have heard of Hilmar for its claim to fame of being home of the Hilmar Cheese Company. This company's Hilmar facility produces more cheese per year from a single site than any other cheese manufacturer in the world!</p>
 										<p>I earned my B.S. in Mathematics from Stanislaus State, and my M.S. and Ph.D. both in Mathematics from the <a href="https://www.unl.edu">University of Nebraska-Lincoln</a>. My research background is in combinatorics in graph theory, and my current interests lie in applications of discrete mathematics in data science and image processing. I have had the opportunity to mentor many fantastic research students through <a href="https://www.csustan.edu/AMP/join">CSU-LSAMP</a> and Stan State's <a href="https://www.csustan.edu/STEM-success/research-and-immersion-stem-excellence">RISE</a> program. Read about their projects under the Research section on the left menu.</p>
@@ -92,7 +92,6 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Working remotely 2020-21 AY.</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="mailto:jdesilva1@csustan.edu">jdesilva1[at]csustan.edu</a></li>
 									</ul>
@@ -100,7 +99,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Dr. De Silva's Homepage. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; Jessica De Silva's Homepage. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
