--- a/student_news.html
+++ b/student_news.html
@@ -283,7 +283,6 @@
 					<header class="major">
 						<h2>Get in touch</h2>
 					</header>
-					<p>Working remotely 2020-21 AY.</p>
 					<ul class="contact">
 						<li class="icon solid fa-envelope"><a
 								href="mailto:jdesilva1@csustan.edu">jdesilva1[at]csustan.edu</a></li>
@@ -292,7 +291,7 @@
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; Dr. De Silva's Homepage. All rights reserved. Design: <a
+					<p class="copyright">&copy; Jessica De Silva's Homepage. All rights reserved. Design: <a
 							href="https://html5up.net">HTML5 UP</a>.</p>
 				</footer>
 
